# OS-ex3

./: CMakeLists.txt  Context.cpp  Context.h  JobManager.cpp  JobManager.h  Makefile  MapReduceFramework.cpp  README  SampleClient.cpp  ThreadContext.h
Tests/: test2.cpp
demo/Atomic/: atomicdemo  atomicdemo_multivar
demo/Barrier/: barrierdemo
mattanTests/: SampleClient.cpp
